# my-hermes-skills

./: .bundled_manifest  .curator_state  .gitignore  .usage.json  README.md  SKILLS.md  lark-approval  lark-attendance  lark-base  lark-calendar  lark-contact  lark-doc  lark-drive  lark-event  lark-im  lark-mail  lark-minutes  lark-okr  lark-openapi-explorer  lark-shared  lark-sheets  lark-skill-maker  lark-slides  lark-task  lark-vc  lark-whiteboard  lark-wiki  lark-workflow-meeting-summary  lark-workflow-standup-report
.archive/bilibili-ai-trending/: SKILL.md
.archive/bilibili-trending/: SKILL.md
.archive/codebase-communication/: SKILL.md
.archive/lark-doc-md-import/: SKILL.md
.archive/lark-doc-pitfalls/: SKILL.md
.archive/ocr-and-documents/: SKILL.md
.archive/youtube-ai-trending/: SKILL.md
.archive/youtube-ai-trending-monitor/: SKILL.md
.archive/youtube-content/: SKILL.md
.curator_backups/2026-05-29T17-07-52Z/: cron-jobs.json  manifest.json
.hub/: lock.json
ai-video-multidoc-report/: SKILL.md
bilibili-ai-trending-pitfalls-2026-06-20/: SKILL.md
codebase-exploration/: SKILL.md
docs/: weibo-cli-design.md
lark-drive-permission-owner/: SKILL.md
lark-pitfalls/: SKILL.md
modelscope-weekly-trends/: SKILL.md
scripts/: sync-skills.sh
session-state-verification/: SKILL.md
social-media/weibo-cli/: AGENTS.md  README.md  SKILL.md  pyproject.toml  weibo
social-media/weibo-cli/tests/: test_client.py  test_models.py
social-media/weibo-cli/weibo_cli/: __main__.py  auth.py  cache.py  cli.py  client.py  config.py  constants.py  exceptions.py  formatter.py  models.py  parser.py  serialization.py
tech-blog/: SKILL.md
tech-research-doc/: SKILL.md
(+252 files in other folders)
